Fix/Fixed views style
Added styling of views, added sing out implementation, fixed some issues